[package]
name = "key-configurator"
version = "0.1.0"
authors = ["Kevin Huynh <kevinhuynh1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.70"
uinput-sys = "0.1.7"
evdev-rs = "0.5.0"
xcb = "0.9"
